# ttk-wheel-test

./: Dockerfile  dist.sh  pyproject.toml  test.sh
.github/workflows/: publish_python_manylinux.yml
scripts/: install  test.py
